# Textgrad_projects

./: .gitignore  environment.textgrad.yml
AdversarialGVAgent/: .gitignore  README.md  pyproject.toml
AdversarialGVAgent/logs/: 2026-07-03_15-28-19.jsonl  2026-07-03_15-28-44.jsonl  2026-07-03_15-31-18.jsonl  2026-07-03_15-31-31.jsonl  2026-07-03_15-58-07.jsonl  2026-07-03_16-17-00.jsonl  2026-07-06_13-29-18.jsonl  2026-07-06_13-33-15.jsonl  2026-07-06_13-45-25.jsonl  2026-07-06_14-59-47.jsonl  2026-07-06_16-23-20.jsonl  2026-07-06_16-23-53.jsonl  2026-07-06_16-27-09.jsonl  2026-07-06_16-30-11.jsonl  2026-07-06_16-44-40.jsonl  2026-07-06_16-45-51.jsonl  2026-07-06_16-49-41.jsonl
AdversarialGVAgent/runs/: gradient_traces.csv  results.csv
AdversarialGVAgent/scripts/: build_balanced_labeled_trainset.py  build_mixed_gsm8k_trainset.py  collect_gsm8k_initial_correct.py  collect_gsm8k_initial_wrong.py  collect_gsm8k_labels.py  evaluate_remaining_full_test.py  run_hardset_main.py  run_oracle_routed_hardset.py  run_qwen32b_initial_baseline.py  run_qwen4b_initial_baseline.py  run_qwen4b_original_textgrad_qwen32b.py  run_qwen4b_vanilla_textgrad_qwen32b.py  sample_balanced_hardset.py
AdversarialGVAgent/tests/: test_agent_graph.py  test_batch_tolerance.py  test_cli.py  test_data.py  test_evaluation.py  test_gradient_reporting.py  test_hardset_cli.py  test_initial_baseline.py  test_oracle_routing.py  test_original_textgrad_baseline.py  test_progress_logging.py  test_progress_planning.py  test_recording.py  test_reporting.py  test_sample_balanced_hardset.py  test_trainer.py  (+2 more)
(+52 files in other folders)
